--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 								/>
 							</div>
 						</div>
-						<div class="col-md-8">
+						<div class="col-md-4">
 							<div class="need-repair-wrapper">
 								<div class="title">
 									Need a Laptop Repair?
@@ -222,13 +222,49 @@
 									ut provident nobis. Magni neque ipsam quaerat ex accusamus
 									quos
 								</div>
-								<div class="submit-btn">
-									<button>Inquiry</button>
+								
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="mobile">
+								<img src="assets/images/mobile.png" class="img-fluid" alt="">
+								<div class="inquery-form">
+									<form action="">
+										<div class="form-group">
+											<label for="">Name</label>
+											<input type="text" class="form-control">
+										</div>
+										<div class="form-group">
+											<label for="">Phone</label>
+											<input type="text" class="form-control">
+										</div>
+										<div class="form-group">
+											<label for="">Email</label>
+											<input type="text" class="form-control">
+										</div>
+										<div class="form-group">
+											<label for="">Service</label>
+											<select name="" class="form-control" id="">
+												<option value="">Laptop Repair</option>
+												<option value="">Monitor Repair</option>
+												<option value="">Desktop Repair</option>
+												<option value="">Server Maintainance</option>
+												<option value="">Data Recovery</option>
+												<option value="">Work Station</option>
+											</select>
+										</div>
+										<div class="form-group">
+											<div class="submit-btn">
+												<button>Inquiry</button>
+											</div>
+										</div>
+									</form>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+				
 			</section>
 			<section class="why">
 				<div class="container">
